libs/modkit/macros/tests/ui/fail/caps_not_array.stderr
error: caps must be an array, e.g. caps = [db, rest]
 --> tests/ui/fail/caps_not_array.rs:3:25
  |
3 | #[module(name="x", caps="rest")]
  |                         ^^^^^^
